[gd_scene load_steps=6 format=3 uid="uid://ksm4jt1h5xce"]

[ext_resource type="Script" uid="uid://delqcrtlseoea" path="res://scenes/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://btxgpjbgcw4lp" path="res://scenes/BuildingManger.tscn" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://bnt28ybgtrjr0" path="res://buildings/building.gd" id="3_lbhrr"]
[ext_resource type="Resource" uid="uid://b1ttq6tbu7vgb" path="res://resources/buildings/farm_building_resource.tres" id="4_lbhrr"]
[ext_resource type="Resource" uid="uid://dybqdfgy3lssh" path="res://resources/buildings/temple_building_resource.tres" id="5_iywne"]

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -103.0
offset_top = -40.0
offset_right = 1179.0
offset_bottom = 669.0
color = Color(0.52906674, 0.5290667, 0.5290667, 1)

[node name="Generate_Value_Button" type="Button" parent="."]
offset_left = 927.0
offset_top = 544.0
offset_right = 1127.0
offset_bottom = 624.0
text = "GENERATE"

[node name="Current_Value_Label" type="Label" parent="."]
offset_left = 949.0
offset_top = 3.0
offset_right = 1150.0
offset_bottom = 81.0

[node name="Cycle_Interval" type="Timer" parent="."]
autostart = true

[node name="BuildingManger" parent="." instance=ExtResource("2_yqjtg")]
currentBuildings = Array[ExtResource("3_lbhrr")]([ExtResource("4_lbhrr"), ExtResource("5_iywne")])

[connection signal="pressed" from="Generate_Value_Button" to="." method="_on_generate_value_button_pressed"]
